--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -113,6 +113,7 @@
     top: 10%;
     border-radius: 4px;
     opacity: 0;
+    display: none;
     transition: opacity .5s ease-in;
 }
 
